# pv_view_7

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
data/: ap.html  finish.html
main/: CH422G.cpp  CH422G.h  CMakeLists.txt  access_point.h  application.cpp  application.h  connection_manager.h  dspl_task.cpp  dspl_task.h  hardware.h  http_server.h  idf_component.yml  json_serializer.h  literals.h  main.cpp  main_screen.cpp  main_screen.h  mqtt.h  mqtt_queue_data.h  mqtt_task.cpp  mqtt_task.h  noway_screen.cpp  noway_screen.h  reset_task.cpp  rptask.cpp  rptask.h  sd_card.h  setting_screen.cpp  setting_screen.h  shoelace.h  sngl_ch422.cpp  sngl_ch422.h  time_task.cpp  time_task.h  ui_transfer.h  utils.h  web_task.cpp  web_task.h  wifi_client.h  wifi_scanner.h  (+2 more)
main/ui/: button_panel.h  display_driver.cpp  display_driver.h  icons8_car_battery_48.h  icons8_error_30.h  icons8_generator_32.h  icons8_home_48.h  icons8_solar_panel_48.h  icons8_telephone_pole_48.h  icons8_wifi_24.h  label_panel.h  screen_if.h  screen_manager.cpp  screen_manager.h  scrool_input_area.h  ui.h  ui_style.h  wifi_selector.h
partition_table/: partition_table.csv
